--- a/give-classes.html
+++ b/give-classes.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="witdh=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#8257E5">
   
   <title>Proffy | Sua plataforma de estudos online</title>
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="/styles/partials/forms.css">
   <link rel="stylesheet" href="/styles/partials/give-classes.css">
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">  
+
+  <script src="/scripts/addFiled.js" defer></script>
 </head>
 <body id="page-give-classes">
   <div id="container">
@@ -87,37 +89,11 @@
         </fieldset>
 
 
-        <fieldset>
+        <fieldset id="schedule-items">
           <legend>Horários disponíveis
-            <button id="add-time">+ Novo Horário</button>
+            <button type="button" id="add-time">+ Novo Horário</button>
           </legend>
-          <div class="shedule-item">
-            <div class="select-block">
-              <label for="weekday">Dia da semana</label>
-              <select name="weekday[]">
-                <option value="">Selecione uma opção</option>
-                <option value="0">Domingo</option>
-                <option value="1">Segunda-feira</option>
-                <option value="2">Terça-feira</option>
-                <option value="3">Quarta-feira</option>
-                <option value="4">Quinta-feira</option>
-                <option value="5">Sexta-feira</option>
-                <option value="6">Sábado</option>
-              </select>
-            </div>
-
-            <div class="input-block">
-              <label for="time_from">Das</label>
-              <input type="time" name="time_from[]" required>
-            </div>
-
-            <div class="input-block">
-              <label for="time_from">Até</label>
-              <input type="time" name="time_to[]" required>
-            </div>
-          </div>
-
-          <div class="shedule-item">
+          <div class="schedule-item">
             <div class="select-block">
               <label for="weekday">Dia da semana</label>
               <select name="weekday[]">
